// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart renders correctly when legend is focused 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1hor4qk-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1fefbua-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #521094;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-1a0n7uk-Bullet-animationFlash {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #5e47be;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-yil21r-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.cache-f85np2-Line {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.cache-vv7wk2-ProgressiveLine {
  border-bottom: 1px solid #521094;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.cache-1y6i3uw-Value {
  margin-left: 6px;
  font-weight: 500;
}

.cache-1kxdvj5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #3f4250;
}

.cache-14y4sjq-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #0083e6;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-vvxgkj-ProgressiveLine {
  border-bottom: 1px solid #521094;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-1kb8v2a-Container epjfe5p2"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#222638"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                fill="#5e47be"
                opacity="1"
                stroke="rgb(66, 50, 133)"
                stroke-width="0"
              />
              <path
                d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                fill="#0083e6"
                opacity="1"
                stroke="rgb(0, 92, 161)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-1hor4qk-List e12qyakg8"
    >
      <div
        aria-controls="chart-legend-compute"
        aria-describedby="chart-legend-compute"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1fefbua-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-1a0n7uk-Bullet-animationFlash e12qyakg6"
            color="#5e47be"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-yil21r-Text e12qyakg3"
            >
              Compute
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vv7wk2-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-1y6i3uw-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-gpu"
        aria-describedby="chart-legend-gpu"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-14y4sjq-Bullet e12qyakg6"
            color="#0083e6"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              GPU Instances
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly when legend is hovered 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1hor4qk-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1fefbua-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #521094;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-1a0n7uk-Bullet-animationFlash {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #5e47be;
  -webkit-animation: animation-0 linear 1500ms infinite;
  animation: animation-0 linear 1500ms infinite;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-yil21r-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 500;
}

.cache-f85np2-Line {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.cache-vv7wk2-ProgressiveLine {
  border-bottom: 1px solid #521094;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 100%;
}

.cache-1y6i3uw-Value {
  margin-left: 6px;
  font-weight: 500;
}

.cache-1kxdvj5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #3f4250;
}

.cache-14y4sjq-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #0083e6;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-vvxgkj-ProgressiveLine {
  border-bottom: 1px solid #521094;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-1kb8v2a-Container epjfe5p2"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#222638"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                fill="#5e47be"
                opacity="1"
                stroke="rgb(66, 50, 133)"
                stroke-width="0"
              />
              <path
                d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                fill="#0083e6"
                opacity="1"
                stroke="rgb(0, 92, 161)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-1hor4qk-List e12qyakg8"
    >
      <div
        aria-controls="chart-legend-compute"
        aria-describedby="chart-legend-compute"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1fefbua-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-1a0n7uk-Bullet-animationFlash e12qyakg6"
            color="#5e47be"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-yil21r-Text e12qyakg3"
            >
              Compute
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vv7wk2-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-1y6i3uw-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-gpu"
        aria-describedby="chart-legend-gpu"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-14y4sjq-Bullet e12qyakg6"
            color="#0083e6"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              GPU Instances
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with data 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

<div
    class="cache-1kb8v2a-Container epjfe5p2"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#222638"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                fill="#5e47be"
                opacity="1"
                stroke="rgb(66, 50, 133)"
                stroke-width="0"
              />
              <path
                d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                fill="#0083e6"
                opacity="1"
                stroke="rgb(0, 92, 161)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with data and content 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1rvbv3u-StyledContent {
  display: inline-block;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  font-size: 25px;
  line-height: 100px;
  height: 100px;
  width: 100px;
  margin: auto;
  text-align: center;
  vertical-align: middle;
}

<div
    class="cache-1kb8v2a-Container epjfe5p2"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#222638"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                fill="#5e47be"
                opacity="1"
                stroke="rgb(66, 50, 133)"
                stroke-width="0"
              />
              <path
                d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                fill="#0083e6"
                opacity="1"
                stroke="rgb(0, 92, 161)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="cache-1rvbv3u-StyledContent epjfe5p0"
      >
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with detailed legend 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1hor4qk-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1kxdvj5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #3f4250;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-17ln093-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #5e47be;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-f85np2-Line {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.cache-vvxgkj-ProgressiveLine {
  border-bottom: 1px solid #521094;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

.cache-14y4sjq-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #0083e6;
}

<div
    class="cache-1kb8v2a-Container epjfe5p2"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#222638"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                fill="#5e47be"
                opacity="1"
                stroke="rgb(66, 50, 133)"
                stroke-width="0"
              />
              <path
                d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                fill="#0083e6"
                opacity="1"
                stroke="rgb(0, 92, 161)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-1hor4qk-List e12qyakg8"
    >
      <div
        aria-controls="chart-legend-compute"
        aria-describedby="chart-legend-compute"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-17ln093-Bullet e12qyakg6"
            color="#5e47be"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              Compute
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-gpu"
        aria-describedby="chart-legend-gpu"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-14y4sjq-Bullet e12qyakg6"
            color="#0083e6"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              GPU Instances
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with detailed legend and discount 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1hor4qk-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1kxdvj5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #3f4250;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-17ln093-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #5e47be;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-f85np2-Line {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.cache-vvxgkj-ProgressiveLine {
  border-bottom: 1px solid #521094;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

<div
    class="cache-1kb8v2a-Container epjfe5p2"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#222638"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M-1.3667058278484462e-14,-74.4A74.4,74.4,0,1,0,1.3667058278484462e-14,74.4A74.4,74.4,0,1,0,-1.3667058278484462e-14,-74.4Z"
                fill="#5e47be"
                opacity="1"
                stroke="rgb(66, 50, 133)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-1hor4qk-List e12qyakg8"
    >
      <div
        aria-controls="chart-legend-discount"
        aria-describedby="chart-legend-discount"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-discount"
          />
          <div
            class="cache-17ln093-Bullet e12qyakg6"
            color="#5e47be"
            id="chart-legend-discount"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              GPU Instances
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with empty legend placeholder 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-16mg1da-EmptyLegend {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 20px;
}

.cache-1cozjuw-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1kb8v2a-Container epjfe5p2"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#222638"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M-1.3667058278484462e-14,-74.4A74.4,74.4,0,1,0,1.3667058278484462e-14,74.4A74.4,74.4,0,1,0,-1.3667058278484462e-14,-74.4Z"
                fill="#5e47be"
                opacity="1"
                stroke="rgb(66, 50, 133)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <div
      class="cache-16mg1da-EmptyLegend epjfe5p1"
    >
      <p
        class="cache-1cozjuw-StyledText e13y3mga0"
      >
        I am a legend
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with legend 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

.cache-1hor4qk-List {
  font-size: 14px;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow-y: auto;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1kxdvj5-ListItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 8px;
  width: 100%;
  color: #3f4250;
}

.cache-1swvs82-ToggleBox {
  width: 250px;
  height: 21px;
  position: absolute;
}

.cache-17ln093-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #5e47be;
}

.cache-s9pm9i-Label {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.cache-1o1agb-Text {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 6px;
  font-weight: 400;
}

.cache-f85np2-Line {
  border-bottom: 1px solid #d9dadd;
  position: relative;
  width: 100%;
}

.cache-vvxgkj-ProgressiveLine {
  border-bottom: 1px solid #521094;
  position: absolute;
  left: 0;
  top: 0;
  bottom: -1px;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
  width: 0%;
}

.cache-ngx53z-Value {
  margin-left: 6px;
  font-weight: 400;
}

.cache-14y4sjq-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #0083e6;
}

.cache-zctvtv-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #3ebd8f;
}

.cache-jlugwa-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #ac2740;
}

.cache-1lgtfr4-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #9a85ec;
}

.cache-574vwq-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #ff602e;
}

.cache-r46nv3-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #483800;
}

.cache-ck0x9h-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #02a5ad;
}

.cache-1vhat5-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #ffa488;
}

.cache-9x9mng-Bullet {
  display: inline-block;
  border-radius: 100%;
  width: 10px;
  height: 10px;
  margin: 0 8px;
  background: #96edf2;
}

<div
    class="cache-1kb8v2a-Container epjfe5p2"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#222638"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M1.039313891827303,-92.99419243498087A93,93,0,0,1,53.81979226115179,-75.84477543619248L42.88613309329479,-60.7958846329602A74.4,74.4,0,0,0,1.0393138918272897,-74.39274041621438Z"
                fill="#5e47be"
                opacity="1"
                stroke="rgb(66, 50, 133)"
                stroke-width="0"
              />
              <path
                d="M55.501437463108275,-74.62298867995493A93,93,0,0,1,88.12156703782944,-29.725232089881683L70.43053488282992,-23.977067296032654A74.4,74.4,0,0,0,44.567778295251266,-59.574097876722654Z"
                fill="#0083e6"
                opacity="1"
                stroke="rgb(0, 92, 161)"
                stroke-width="0"
              />
              <path
                d="M88.76389834795864,-27.748339591284847A93,93,0,0,1,88.76389834795864,27.748339591284847L71.07286619295911,22.000174797435825A74.4,74.4,0,0,0,71.07286619295911,-22.000174797435825Z"
                fill="#3ebd8f"
                opacity="1"
                stroke="rgb(43, 132, 100)"
                stroke-width="0"
              />
              <path
                d="M88.12156703782944,29.725232089881683A93,93,0,0,1,55.501437463108275,74.62298867995493L44.567778295251266,59.574097876722654A74.4,74.4,0,0,0,70.43053488282992,23.977067296032654Z"
                fill="#ac2740"
                opacity="1"
                stroke="rgb(120, 27, 45)"
                stroke-width="0"
              />
              <path
                d="M53.81979226115179,75.84477543619248A93,93,0,0,1,1.039313891827303,92.99419243498087L1.0393138918272897,74.39274041621438A74.4,74.4,0,0,0,42.88613309329479,60.7958846329602Z"
                fill="#9a85ec"
                opacity="1"
                stroke="rgb(108, 93, 165)"
                stroke-width="0"
              />
              <path
                d="M-1.0393138918272917,92.99419243498087A93,93,0,0,1,-53.819792261151775,75.84477543619249L-42.886133093294774,60.79588463296021A74.4,74.4,0,0,0,-1.0393138918272806,74.39274041621438Z"
                fill="#ff602e"
                opacity="1"
                stroke="rgb(179, 67, 32)"
                stroke-width="0"
              />
              <path
                d="M-55.501437463108275,74.62298867995493A93,93,0,0,1,-88.12156703782944,29.725232089881704L-70.4305348828299,23.97706729603268A74.4,74.4,0,0,0,-44.56777829525128,59.57409787672265Z"
                fill="#483800"
                opacity="1"
                stroke="rgb(50, 39, 0)"
                stroke-width="0"
              />
              <path
                d="M-88.76389834795864,27.748339591284847A93,93,0,0,1,-88.76389834795864,-27.748339591284825L-71.07286619295913,-22.0001747974358A74.4,74.4,0,0,0,-71.07286619295911,22.000174797435818Z"
                fill="#02a5ad"
                opacity="1"
                stroke="rgb(1, 115, 121)"
                stroke-width="0"
              />
              <path
                d="M-88.12156703782944,-29.72523208988168A93,93,0,0,1,-55.50143746310825,-74.62298867995493L-44.567778295251294,-59.57409787672264A74.4,74.4,0,0,0,-70.43053488282992,-23.977067296032665Z"
                fill="#ffa488"
                opacity="1"
                stroke="rgb(179, 115, 95)"
                stroke-width="0"
              />
              <path
                d="M-53.819792261151825,-75.84477543619245A93,93,0,0,1,-1.039313891827273,-92.99419243498087L-1.0393138918273153,-74.39274041621438A74.4,74.4,0,0,0,-42.88613309329479,-60.7958846329602Z"
                fill="#96edf2"
                opacity="1"
                stroke="rgb(105, 166, 169)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
    <ul
      class="cache-1hor4qk-List e12qyakg8"
    >
      <div
        aria-controls="chart-legend-compute"
        aria-describedby="chart-legend-compute"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-compute"
          />
          <div
            class="cache-17ln093-Bullet e12qyakg6"
            color="#5e47be"
            id="chart-legend-compute"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              Compute
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-gpu"
        aria-describedby="chart-legend-gpu"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-gpu"
          />
          <div
            class="cache-14y4sjq-Bullet e12qyakg6"
            color="#0083e6"
            id="chart-legend-gpu"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              GPU Instances
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-functions"
        aria-describedby="chart-legend-functions"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-functions"
          />
          <div
            class="cache-zctvtv-Bullet e12qyakg6"
            color="#3ebd8f"
            id="chart-legend-functions"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              Serverless Functions
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-containers"
        aria-describedby="chart-legend-containers"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-containers"
          />
          <div
            class="cache-jlugwa-Bullet e12qyakg6"
            color="#ac2740"
            id="chart-legend-containers"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              Serverless Containers
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-s3"
        aria-describedby="chart-legend-s3"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-s3"
          />
          <div
            class="cache-1lgtfr4-Bullet e12qyakg6"
            color="#9a85ec"
            id="chart-legend-s3"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              Object Storage
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-dns"
        aria-describedby="chart-legend-dns"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-dns"
          />
          <div
            class="cache-574vwq-Bullet e12qyakg6"
            color="#ff602e"
            id="chart-legend-dns"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              Domain zones
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-appleSilicon"
        aria-describedby="chart-legend-appleSilicon"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-appleSilicon"
          />
          <div
            class="cache-r46nv3-Bullet e12qyakg6"
            color="#483800"
            id="chart-legend-appleSilicon"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              Apple Silicon
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-baremetal"
        aria-describedby="chart-legend-baremetal"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-baremetal"
          />
          <div
            class="cache-ck0x9h-Bullet e12qyakg6"
            color="#02a5ad"
            id="chart-legend-baremetal"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              Baremetal
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-database"
        aria-describedby="chart-legend-database"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-database"
          />
          <div
            class="cache-1vhat5-Bullet e12qyakg6"
            color="#ffa488"
            id="chart-legend-database"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              Database
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
      <div
        aria-controls="chart-legend-lb"
        aria-describedby="chart-legend-lb"
        class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
      >
        <li
          class="cache-1kxdvj5-ListItem e12qyakg7"
        >
          <div
            class="cache-1swvs82-ToggleBox e12qyakg2"
            data-testid="chart-legend-lb"
          />
          <div
            class="cache-9x9mng-Bullet e12qyakg6"
            color="#96edf2"
            id="chart-legend-lb"
          />
          <div
            class="cache-s9pm9i-Label e12qyakg5"
          >
            <span
              class="cache-1o1agb-Text e12qyakg3"
            >
              Load Balancer
            </span>
            <span
              class="cache-f85np2-Line e12qyakg1"
            >
              <span
                class="cache-vvxgkj-ProgressiveLine e12qyakg0"
              />
            </span>
          </div>
          <div
            class="cache-ngx53z-Value e12qyakg4"
          >
            20
          </div>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`PieChart renders correctly with no props 1`] = `
<DocumentFragment>
  .cache-1kb8v2a-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 206px;
}

<div
    class="cache-1kb8v2a-Container epjfe5p2"
    height="206"
  >
    <div
      style="position: relative;"
    >
      <div
        style="position: relative;"
      >
        <svg
          height="206"
          role="img"
          width="206"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs
            aria-hidden="true"
          >
            <pattern
              height="5"
              id="lines"
              patternUnits="userSpaceOnUse"
              width="5"
            >
              <rect
                fill="inherit"
                height="5"
                stroke="rgba(255, 0, 0, 0.1)"
                stroke-width="0"
                width="5"
              />
              <path
                d="
                M 0 0 L 5 0
                M 0 5 L 5 5
            "
                stroke="#222638"
                stroke-linecap="square"
                stroke-width="2"
              />
            </pattern>
          </defs>
          <rect
            fill="transparent"
            height="206"
            width="206"
          />
          <g
            transform="translate(10,10)"
          >
            <g
              transform="translate(93,93)"
            >
              <path
                d="M5.694607616035192e-15,-93A93,93,0,1,1,-5.694607616035192e-15,93A93,93,0,1,1,5.694607616035192e-15,-93M-1.3667058278484462e-14,-74.4A74.4,74.4,0,1,0,1.3667058278484462e-14,74.4A74.4,74.4,0,1,0,-1.3667058278484462e-14,-74.4Z"
                fill="#5e47be"
                opacity="1"
                stroke="rgb(66, 50, 133)"
                stroke-width="0"
              />
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
